2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm: New convenience method get_latest_version, document
	is_virtual.
	* Engine.pm: Move asking for an alternative into a function.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Package.pm, Engine.pm: Make fink do the right thing when multiple
	version specs are encountered. Note that bad things can still happen if
	Fink processes a package's dependencies before a new spec modifies the
	version we should be looking at.
	* Engine.pm: Fix call to get_matching_versions.
	* Package.pm: Re-write get_matching_versions for brevity and correctness.
	Fixes @choose_from parameter not working.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Sort initial queue of dependencies, so that bugs in dep
	engine are reproducible!

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Revert part of a separate patch that for some reason I
	let slip in.

2005-08-22  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm, Package.pm: Make print_virtual_pkg a method of Package.
	* Engine.pm: Use print_virtual_pkg for descriptions of virtuals.
	* PkgVersion.pm: If a virtual package is found and virtuals are undesired,
	print a nice warning. This lets 'fink install something-virtual' and such
	behave more nicely.

2005-08-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Refactor pretty-printing virtual packages into a function.

2005-08-21  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Command.pm: du_sk rounds up, just as du does.

2005-08-18  Matthew Sachs  <msachs@apple.com>

	* Don't fall through to 10.2 for i386-apple-darwin8.FOO for
	values of FOO which we don't know about.

2005-08-13  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch misuse of -Wl,-framework in .pc files.

2005-08-12  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Bootstrap.pm, Services.pm: fix some output redirect stuff on
	external commands.
